<add unit test cases>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 
+<router-outlet>
+    <ng4-loading-spinner> </ng4-loading-spinner>
+</router-outlet>
 
 <header id="header">
     <nav id="main-menu" class="navbar navbar-default navbar-fixed-top" role="banner" style="height: 70px;">
@@ -14,9 +17,7 @@
             </div>
     
             
-        </div><!--/.container-->
-    </nav><!--/nav-->
+        </div>
+    </nav>
   </header>
-  <router-outlet>
-    <ng4-loading-spinner> </ng4-loading-spinner>
-</router-outlet>
+  
