--- a/src/app/components/daily-task/daily-task.component.html
+++ b/src/app/components/daily-task/daily-task.component.html
@@ -58,14 +58,15 @@
                   {{employee.userid}}
                 </option>
               </select>
-
+              <div class="error" *ngIf="!dailyTaskForm.controls['employee'].valid && dailyTaskForm.controls['employee'].touched">{{'Please  Select Employee Id' | translate}}.</div>
             </div>
 
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'Date' | translate }}</label>
                 <input type="date"  formControlName="date" class="loginUserid">
-                <app-control-messages [control]="dailyTaskForm.controls.date"></app-control-messages>
+                <div class="error" *ngIf="!dailyTaskForm.controls['date'].valid &&  dailyTaskForm.controls['date'].touched">{{'Please Enter Today  Date' | translate}}</div>
+               
               </div>
             </div>
           </div>
@@ -74,14 +75,14 @@
               <label class="label-name ">{{ 'TaskName' | translate }}</label>
               <br>
               <input type="text"  formControlName="taskName" class="loginUserid">
-              <app-control-messages [control]="dailyTaskForm.controls.taskName"></app-control-messages>
+              <div class="error" *ngIf="!dailyTaskForm.controls['taskName'].valid &&  dailyTaskForm.controls['taskName'].touched">{{'Please Enter Task Name' | translate}}</div>
             </div>
 
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'EstimationTime' | translate }}</label>
                 <input type="time"  step="0" formControlName="estimationTime" class="loginUserid">
-                <app-control-messages [control]="dailyTaskForm.controls.estimationTime"></app-control-messages>
+                <div class="error" *ngIf="!dailyTaskForm.controls['estimationTime'].valid &&  dailyTaskForm.controls['estimationTime'].touched">{{'Please Enter Estimation Time' | translate}}</div>
               </div>
             </div>
           </div>
@@ -90,14 +91,14 @@
               <label class="label-name ">{{ 'StartTime' | translate }}</label>
               <br>
               <input type="time"  step="0" formControlName="starttime" class="loginUserid">
-              <app-control-messages [control]="dailyTaskForm.controls.starttime"></app-control-messages>
+              <div class="error" *ngIf="!dailyTaskForm.controls['starttime'].valid &&  dailyTaskForm.controls['starttime'].touched">{{'Please Enter Start Time' | translate}}</div>
             </div>
 
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'EndTime' | translate }}</label>
                 <input type="time"  step="0" formControlName="endtime" class="loginUserid">
-                <app-control-messages [control]="dailyTaskForm.controls.endtime"></app-control-messages>
+                <div class="error" *ngIf="!dailyTaskForm.controls['endtime'].valid &&  dailyTaskForm.controls['endtime'].touched">{{'Please Enter End Time' | translate}}</div>
               </div>
             </div>
           </div>
@@ -107,7 +108,7 @@
               <br>
               <textarea type="text" rows="4" cols="50" name="comment" form="usrform" *ngIf="dailyTaskForm.get('description')" formControlName="description"
                 style=" margin-left: 23px"></textarea>
-              <app-control-messages [control]="dailyTaskForm.controls.description"></app-control-messages>
+                <div class="error" *ngIf="!dailyTaskForm.controls['description'].valid &&  dailyTaskForm.controls['description'].touched">{{'Please Enter Description' | translate}}</div>
             </div>
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
@@ -116,8 +117,9 @@
                   <option value="">--Select--</option>
                   <option value="Completed">Completed</option>
                   <option value="InComplete">InComplete</option>
-                  <app-control-messages [control]="dailyTaskForm.controls.description"></app-control-messages>
+                  
                 </select>
+                <div class="error" *ngIf="!dailyTaskForm.controls['status'].valid &&  dailyTaskForm.controls['status'].touched">{{'Please Select Status' | translate}}</div>
               </div>
             </div>
           </div>
