--- a/src/app/components/employee-type/employee-type.component.html
+++ b/src/app/components/employee-type/employee-type.component.html
@@ -63,14 +63,14 @@
               <br>
               <input type="text"  formControlName="type" id="type" name="type" class="loginUserid"
                 placeholder="Employeetype">
-              <app-control-messages [control]="employeetypeForm.controls.type"></app-control-messages>
+                <div class="error" *ngIf="!employeetypeForm.controls['type'].valid && employeetypeForm.controls['type'].touched">{{'Please Enter EmployeeType Name' | translate}}.</div>
             </div>
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'SeekLeave' | translate }}</label>
                 <input type="number" formControlName="seekLeave" onkeypress='return event.charCode >= 48 && event.charCode <= 57'
                   class="loginUserid" placeholder="Seek Leave">
-                <app-control-messages [control]="employeetypeForm.controls.seekLeave"></app-control-messages>
+                  <div class="error" *ngIf="!employeetypeForm.controls['seekLeave'].valid && employeetypeForm.controls['seekLeave'].touched">{{'Please Enter Seek Leave' | translate}}.</div>
               </div>
             </div>
           </div>
@@ -80,12 +80,12 @@
               <br>
               <input type="number"  formControlName="paidLeave" onkeypress='return event.charCode >= 48 && event.charCode <= 57'
                 class="loginUserid" placeholder="Paid Leave">
-              <app-control-messages [control]="employeetypeForm.controls.paidLeave"></app-control-messages>
+                <div class="error" *ngIf="!employeetypeForm.controls['paidLeave'].valid && employeetypeForm.controls['paidLeave'].touched">{{'Please Enter Paid Leave' | translate}}.</div>
             </div>
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'TotalLeave' | translate }}</label>               
-                <span type="number"  id="totalLeave" onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+                <span type="number"   id="totalLeave" onkeypress='return event.charCode >= 48 && event.charCode <= 57'
                   class="loginUserid" placeholder="Total Leave" (click)="totalLeave()" (blur)="totalLeave()" >
                   </span>              
               </div>
