--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,4 @@
-<ng4-loading-spinner> </ng4-loading-spinner>
-<div id="snackbar"[innerHTML]="toastMessage"></div>
+
 <form [formGroup]="userForm" (submit)="onLoginFormSubmit()">
   <div class="container" style="margin-top: 100px ">
     <p id="data"></p>
@@ -14,7 +13,7 @@
           <br>
           <div class="form-group ">
             <div class=" form-group col-lg-6">
-                
+              <div id="snackbar"[innerHTML]="toastMessage"></div>
               <label class="loginlabel required "> {{ 'Userid' | translate }}</label>
               <br>
               <input  type = "text" formControlName="userid" id="userid"  class="loginUserid" (keyup)="validation();" >
@@ -37,7 +36,7 @@
             
           </div>
           <div>
-            <button type="submit" class=" btncolor"   (click)="validate();">{{ 'SignIn' | translate }}</button>
+            <button type="submit" class=" btncolor"[disabled]="!enabled"   (click)="validate();">{{ 'SignIn' | translate }}</button>
           </div>
         </div>
       </div>
