Login page refactoring

--- a/src/app/components/control-messages/control-messages.component.css
+++ b/src/app/components/control-messages/control-messages.component.css
@@ -1,11 +1,11 @@
-.errorMessage{
+/*.errorMessage{
     margin-left: 20px;
     width: 380px;
     height: 25px;
     color: red;
     background-color: #fff;
     padding-top: 7px;
-}
-input.ng-invalid.ng-touched {
+}*/
+/*input.ng-invalid.ng-touched {
     border: 1px solid red;
-  }
+  }*/
