--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,56 +1,48 @@
-
 <form [formGroup]="userForm" (submit)="onLoginFormSubmit()">
   <div class="container" style="margin-top: 100px ">
     <p id="data"></p>
 
-    <div class="col-lg-12">
-      <div class=" form-group col-lg-7">
-        <div class=" form-control  loginForm" >
-          <h1 align="center">{{ 'HRMS' | translate }}</h1>
-          <div class="logininside">
-            <p>Access and manage your instances from this HRMS account.</p>
-          </div>
-          <br>
-          <div class="form-group ">
-            <div class=" form-group col-lg-6">
-              <div id="snackbar"[innerHTML]="toastMessage"></div>
-              <label class="loginlabel required "> {{ 'Userid' | translate }}</label>
-              <br>
-              <input  type = "text" formControlName="userid" id="userid"  class="loginUserid" (keyup)="validation();" >
-              <div class="error" *ngIf="!userForm.controls['userid'].valid && userForm.controls['userid'].touched">{{'Please Enter UserId' | translate}}.</div>
-             <div class ="valid"  id="userid_validation"></div>
-            </div>
-          </div>
-
-          <div class="form-group ">
-            <div class=" form-group col-lg-6 " style="margin-right: 30px">
-              <label class=" required loginlabel"> {{ 'Password' | translate }} </label>
-              <br>
-              <input  type = "password" formControlName="password" id="password"  class="loginUserid" (keyup)="validation();">
-              <div class="error" *ngIf="!userForm.controls['password'].valid && userForm.controls['password'].touched">{{'Please Enter Password' | translate}}.</div>
-           <div class ="valid" id="password_validation"></div>
-            </div>
-          </div>
-          <div>
-            <a class="reset" routerLink="/resetpassword">{{ 'ResetPassword' | translate }}</a>
-            
-          </div>
-          <div>
-            <button type="submit" class=" btncolor"[disabled]="!enabled"   (click)="validate();">{{ 'SignIn' | translate }}</button>
-          </div>
+    <div class="col-sm-12">
+      <div id="snackbar"[innerHTML]="toastMessage"></div>
+      <div class="login-form">
+        <h1 align="center">{{ 'HRMS' | translate }}</h1>
+        <div class="bs-callout bs-callout-info">
+          <h4>{{ 'Login Here' | translate}}</h4>
+          <p>{{'loginPageMessage' | translate}}</p>
         </div>
+
+        <div class=" form-group col-sm-12" [ngClass]="{'has-error':!userForm.controls['userid'].valid && userForm.controls['userid'].touched}">
+          <label class="control-label" for="userid"> {{ 'User Id' | translate }}</label>
+          <input type="text" formControlName="userid" id="userid" class="form-control">
+          <app-control-messages [formGroup]="userForm" [displayName]="'User Id'" [control]="userForm.controls['userid']"></app-control-messages>
+
+        </div>
+
+
+        <div class="form-group col-sm-12 " [ngClass]="{'has-error':!userForm.controls['password'].valid && userForm.controls['password'].touched}">
+          <label class="control-label" for="password"> {{ 'Password' | translate }} </label>
+          <input type="password" formControlName="password" id="password" class="form-control">
+          <app-control-messages [formGroup]="userForm" [displayName]="'Password'" [control]="userForm.controls['password']"></app-control-messages>
+        </div>
+
+        <div class="form-group">
+          <a routerLink="/resetpassword">{{ 'ResetPassword' | translate }}</a>
+        </div>
+
+          <button type="submit" class="btn btn-primary btn-lg btn-block" [disabled]="!userForm.valid" (click)="validate();">{{ 'Sign In' | translate }}</button>
+
       </div>
     </div>
   </div>
 </form>
- 
-<footer id="footer" style="    margin-top: 250px;">
+
+<footer id="footer" style="margin-top: 250px;">
   <div class="container">
-      <div class="row">
-          <div class="col-sm-6">
-              Designed by <a target="_blank" href="http://nextechservices.in/" title="Web applications development angularjs websites">Nextech Services Pvt Ltd. </a>
-          </div>
-          
+    <div class="row">
+      <div class="col-sm-6">
+        Designed by <a target="_blank" href="http://nextechservices.in/" title="Web applications development angularjs websites">Nextech Services Pvt Ltd. </a>
       </div>
+
+    </div>
   </div>
 </footer>
