--- a/src/styles.css
+++ b/src/styles.css
@@ -32,11 +32,10 @@
     margin-left: 5.5%;
 }
 .adduser{
-    
     width: 17%;
     height: 40px;
-    background-color: #111111e8;
-    color: white
+    background-color: #111111;
+    color: white;
 }
 .userlist {
     margin-left: 2.5%;
@@ -158,9 +157,9 @@
 .tableft{
     margin-left: 3%
 }
-.ng-touched.ng-invalid {
+/*.ng-touched.ng-invalid {
     border-color:red; 
-}
+}*/
 #footer {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -174,3 +173,23 @@
    padding-top: 7px;
      width: 250px 
   }
+
+.bs-callout {
+    padding: 20px;
+    margin: 20px 0;
+    border: 1px solid #eee;
+    border-left-width: 5px;
+    border-radius: 3px;
+}
+
+.bs-callout-info {
+    border-left-color: #1b809e;
+}
+
+.bs-callout-info h4 {
+    color: #1b809e;
+}
+.bs-callout h4 {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
